# face_recog

./: .gitignore  BUILD_INSTRUCTIONS  README.md  USAGE_INSTRUCTIONS  package.xml  setup.cfg  setup.py
face_recog/: live_face_recog.py  make_classifier.py  review_training_data.py
face_recog/classifier/: classifier_model.py
launch/: face_recog_demo.launch.xml
