<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>face_recog</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="33916898+elpidiovaldez@users.noreply.github.com">paul</maintainer>
  <license>Apache-2.0</license>

  <depend>cv2</depend>
  <depend>cv_bridge</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
